--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@ header, footer {
 }
 
 header .top-section {
-    justify-content: space-between;
     display: flex;
+    justify-content: space-between;
+    padding: 24px;
 }
 
 .header-logo {
@@ -35,6 +36,7 @@ header .top-section {
     list-style: none;
     margin: 0;
     padding: 0;
+    gap: 24px;
 }
 
 .call-to-action-section {
