--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ header .top-section {
     color: #F9FAF8;
     text-decoration: none;
     font-size: 24px;
+    font-weight: bolder;
 }
 
 .hero-section h1 {
