--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,10 @@ header .top-section {
     justify-content: space-between;
 }
 
+.hero-section button {
+    border: transparent 
+}
+
 .hero-section h1 {
     color: #F9FAF8;
     font-size: 48px;
@@ -56,7 +60,8 @@ header .top-section {
 button,
 .banner {
     background-color: #3882F6;
-    color: #F9FAF8; 
+    color: #F9FAF8;
+    border-radius: 6px; 
 }
 
 .illustrations-section h2 {
