--- a/styles.css
+++ b/styles.css
@@ -44,12 +44,14 @@ header .top-section {
     color: #F9FAF8;
     font-size: 48px;
     font-weight: 900;
+    margin: 8px 0;
 }
 
 .top-section .header-nav,
 .hero-section h3 {
     color: #E5E7EB;
     font-size: 18px;
+    margin: 0;
 }
 
 .top-section .header-nav {
