fix: Swap h3 to p, add breakline between sentences

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ header .top-section {
 }
 
 .top-section .header-nav,
-.hero-section h3 {
+.hero-section p {
     color: #E5E7EB;
     font-size: 18px;
     margin: 0;
