--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,14 @@ button {
     margin: 12px 0;
 }
 
+.illustrations-section h2 {
+    text-align: center;
+}
+
+.illustrations-section .images-container {
+    display: flex;
+}
+
 button,
 .call-to-action-section .banner {
     background-color: #3882F6;
