--- a/styles.css
+++ b/styles.css
@@ -69,12 +69,23 @@ button {
     margin: 12px 0;
 }
 
-.illustrations-section h2 {
+.illustrations-section {
     text-align: center;
 }
 
 .illustrations-section .images-container {
     display: flex;
+    justify-content: center;
+    gap: 48px;
+    margin: 64px 0;
+}
+
+.image-and-description {
+    max-width: 160px;
+}
+
+.image-and-description .image-subtext {
+    margin: 4px;
 }
 
 button,
